--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,14 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "api/get-skills.py", "use": "@vercel/python" }
-  ],
+  "functions": {
+    "api/get-skills.py": {
+      "runtime": "python3.9"
+    }
+  },
   "routes": [
-    { "src": "/get-skills/(.*)/(.*)", "dest": "api/get-skills.py" }
+    {
+      "src": "/get-skills",
+      "dest": "api/get-skills.py"
+    }
   ]
 }
